summer-jaeb/tests/compile_fail/async_dead_letter.stderr
error: DeadLetter listeners must be synchronous — remove `async` (subscribe_dead_letters requires SyncEventHandler)
 --> tests/compile_fail/async_dead_letter.rs:8:1
  |
8 | async fn on_dead_letter(event: &DeadLetter) -> HandlerResult {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `DeadLetter` and `HandlerResult`
 --> tests/compile_fail/async_dead_letter.rs:4:12
  |
4 | use jaeb::{DeadLetter, HandlerResult};
  |            ^^^^^^^^^^  ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
